<resources>
    <string name="app_name">SoulDuct</string>
    <string name="app_subtitle">Soft Delivery</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="applica_configurazione">Applica configurazione</string>
    <string name="installa_firmware">Installa firmware</string>
    <string name="applica_patch">Applica patch</string>
    <string name="vendor">Vendor:</string>
    <string name="model">Model:</string>
    <string name="apri_la_console">Apri la console</string>
    <string name="Connetti_il_cavo_usb">Connetti il cavo usb al device...</string>
    <string name="huawei">Huawei</string>
    <string name="vendor_card">Vendor</string>
    <string name="model_card">Model</string>
    <string name="ar_19_15">AR 19-15</string>
    <string name="menu">Scegli quali azioni effettuare sul device</string>
    <string name="applica_firmware">Applica firmware</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
